[TASK] Finish replacing Lorem Ipsum

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<img class="img-responsive img-thumbnail" src="images/california.jpg" alt="">
 						<div class="featured-info">								
 							<h3>California</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
+							<p>Applications can pay for themselves with Bitcoin or Ripple</p>
 							<a href="https://california.codiustest.net" target="_blank"class="btn btn-custom">california.codiustest.net</a>	
 						</div>
 					</div>
@@ -120,40 +120,40 @@
 						<img class="img-responsive img-thumbnail" src="images/ireland.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Ireland</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-							<a href="#" class="btn btn-custom" data-toggle="modal" data-target="#featured-modal">Read More</a>	
+							<p>Upload multi-host applications for true decentralised apps</p>
+							<a href="https://ireland.codiustest.net" target="_blank"class="btn btn-custom">ireland.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
 						<img class="img-responsive img-thumbnail" src="images/virginia.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Virginia</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-							<a href="#" class="btn btn-custom" data-toggle="modal" data-target="#featured-modal">Read More</a>	
+							<p>Anyone in the world can pay for any app to keep running</p>
+							<a href="https://virginia.codiustest.net" target="_blank"class="btn btn-custom">virigina.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
 						<img class="img-responsive img-thumbnail" src="images/singapore.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Singapore</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-							<a href="#" class="btn btn-custom" data-toggle="modal" data-target="#featured-modal">Read More</a>	
+							<p>Fully Turing-complete and networked smart contract engine</p>
+							<a href="https://singapore.codiustest.net" target="_blank"class="btn btn-custom">singapore.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
 						<img class="img-responsive img-thumbnail" src="images/oregon.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Oregon</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-							<a href="#" class="btn btn-custom" data-toggle="modal" data-target="#featured-modal">Read More</a>	
+							<p>Each app has a unique cryptographic public/private key</p>
+							<a href="https://oregon.codiustest.net" target="_blank"class="btn btn-custom">oregon.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
 						<img class="img-responsive img-thumbnail" src="images/sao-paulo.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Sao Paulo</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-							<a href="#" class="btn btn-custom" data-toggle="modal" data-target="#featured-modal">Launch</a>	
+							<p>Geogrpahically distributed to increase trust in software</p>
+							<a href="https://sao-paulo.codiustest.net" target="_blank"class="btn btn-custom">sao-paulo.codiustest.net</a>	
 						</div>
 					</div>
 					
