[TASK] Update metadata in index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="A one page template very usefuly on any kind of website niche">
-		<meta name="author" content="Bootstrap Wizard">
+		<meta name="description" content="Worldwide test network for the Codius smart host"
+		<meta name="author" content="Ripple Labs Inc">
 		<link rel="shortcut icon" href="img/favicon.ico">
-		<title>Codius Test Net - One Page Template</title>
+		<title>Codius Test Net - Worldwide Open Hosting</title>
 
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
