[TASK] Add port numbers to links to hosts

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="featured-info">								
 							<h3>Sydney</h3>
 							<p>No account registration is required to run an app on Codius</p>
-							<a href="https://sydney.codiustest.net" target="_blank"class="btn btn-custom">sydney.codiustest.net</a>	
+							<a href="https://sydney.codiustest.net:2633" target="_blank"class="btn btn-custom">sydney.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
@@ -97,7 +97,7 @@
 						<div class="featured-info">								
 							<h3>Tokyo</h3>
 							<p>Write your applications in javascript, run on any Codus Host</p>
-							<a href="https://tokyo.codiustest.net" target="_blank"class="btn btn-custom">tokyo.codiustest.net</a>	
+							<a href="https://tokyo.codiustest.net:2633" target="_blank"class="btn btn-custom">tokyo.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
@@ -105,7 +105,7 @@
 						<div class="featured-info">								
 							<h3>Frankfurt</h3>
 							<p>Codius verifies which code is running, apps trust each other</p>
-							<a href="https://frankfurt.codiustest.net" target="_blank"class="btn btn-custom">frankfurt.codiustest.net</a>	
+							<a href="https://frankfurt.codiustest.net:2633" target="_blank"class="btn btn-custom">frankfurt.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
@@ -113,7 +113,7 @@
 						<div class="featured-info">								
 							<h3>California</h3>
 							<p>Applications can pay for themselves with Bitcoin or Ripple</p>
-							<a href="https://california.codiustest.net" target="_blank"class="btn btn-custom">california.codiustest.net</a>	
+							<a href="https://california.codiustest.net:2633" target="_blank"class="btn btn-custom">california.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
@@ -121,7 +121,7 @@
 						<div class="featured-info">								
 							<h3>Ireland</h3>
 							<p>Upload multi-host applications for true decentralised apps</p>
-							<a href="https://ireland.codiustest.net" target="_blank"class="btn btn-custom">ireland.codiustest.net</a>	
+							<a href="https://ireland.codiustest.net:2633" target="_blank"class="btn btn-custom">ireland.codiustest.net</a>	
 						</div>
 					</div>
 					<div class="featured-box item text-center">
@@ -129,7 +129,7 @@
 						<div class="featured-info">								
 							<h3>Virginia</h3>
 							<p>Anyone in the world can pay for any app to keep running</p>
-							<a href="https://virginia.codiustest.net" target="_blank"class="btn btn-custom">virigina.codiustest.net</a>	
+							<a href="https://virginia.codiustest.net:2633" target="_blank"class="btn btn-custom">virigina.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
@@ -137,7 +137,7 @@
 						<div class="featured-info">								
 							<h3>Singapore</h3>
 							<p>Fully Turing-complete and networked smart contract engine</p>
-							<a href="https://singapore.codiustest.net" target="_blank"class="btn btn-custom">singapore.codiustest.net</a>	
+							<a href="https://singapore.codiustest.net:2633" target="_blank"class="btn btn-custom">singapore.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
@@ -145,7 +145,7 @@
 						<div class="featured-info">								
 							<h3>Oregon</h3>
 							<p>Each app has a unique cryptographic public/private key</p>
-							<a href="https://oregon.codiustest.net" target="_blank"class="btn btn-custom">oregon.codiustest.net</a>	
+							<a href="https://oregon.codiustest.net:2633" target="_blank"class="btn btn-custom">oregon.codiustest.net</a>	
 						</div>
 					</div>
           <div class="featured-box item text-center">
@@ -153,7 +153,7 @@
 						<div class="featured-info">								
 							<h3>Sao Paulo</h3>
 							<p>Geogrpahically distributed to increase trust in software</p>
-							<a href="https://sao-paulo.codiustest.net" target="_blank"class="btn btn-custom">sao-paulo.codiustest.net</a>	
+							<a href="https://sao-paulo.codiustest.net:2633" target="_blank"class="btn btn-custom">sao-paulo.codiustest.net</a>	
 						</div>
 					</div>
 					
