--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<img class="img-responsive img-thumbnail" src="images/tokyo.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Tokyo</h3>
-							<p>Write your applications in javascript, run on any Codus Host</p>
+							<p>Write your applications in JavaScript, run on any Codius Host</p>
 							<a href="https://tokyo.codiustest.net" target="_blank"class="btn btn-custom">tokyo.codiustest.net</a>	
 						</div>
 					</div>
@@ -120,7 +120,7 @@
 						<img class="img-responsive img-thumbnail" src="images/ireland.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Ireland</h3>
-							<p>Upload multi-host applications for true decentralised apps</p>
+							<p>Upload multi-host applications for true decentralized apps</p>
 							<a href="https://ireland.codiustest.net" target="_blank"class="btn btn-custom">ireland.codiustest.net</a>	
 						</div>
 					</div>
@@ -152,7 +152,7 @@
 						<img class="img-responsive img-thumbnail" src="images/sao-paulo.jpg" alt="">
 						<div class="featured-info">								
 							<h3>Sao Paulo</h3>
-							<p>Geogrpahically distributed to increase trust in software</p>
+							<p>Geographically distributed to increase trust in software</p>
 							<a href="https://sao-paulo.codiustest.net" target="_blank"class="btn btn-custom">sao-paulo.codiustest.net</a>	
 						</div>
 					</div>
