[TASK] Update cpu prices $0.02/hour [Finishes #89727172]

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 							</div>
 							<ul class="unstyled price-list">
 								<li>Powered by Ripple REST</li>
-								<li><b>0.75 CPU</b> Per Drop of XRP</li>
+								<li><b>2,000 CPU</b> per XRP</li>
 							</ul>
 							<div class="price-action">
 								<a href="#" class="btn btn-custom">Sign Up</a>	
@@ -238,7 +238,7 @@
 							</div>
 							<ul class="unstyled price-list">
 								<li>Powered by Bitcoin Core</li>
-								<li><b>100,000 CPU </b> per Bitcoin</li>
+								<li><b>50,000,000 CPU </b> per Bitcoin</li>
 							</ul>
 							<div class="price-action">
 								<a href="#" class="btn btn-custom">Sign Up</a>	
