[FIX] Replace rippletest.net with codiustest.net

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 			
 				<div class="section-heading">
 					<h2>Codius Test Net</h2>
-					<h3>-- Coming Soon! --</h3>
           <h4>Ripple Labs runs Codius test hosts in every AWS region on Earth</h4>
-          <h5 style='color:yellow'>Warning!! This network is for testing only. Though fees are set trivially low, there are no refunds. Expect the codius hosts at rippletest.net to be reset every few weeks. Do please use at your own risk.</h5>
+          <h5 style='color:yellow'>Warning!! This network is for testing only. Though fees are set trivially low, there are no refunds. Expect the codius hosts at codiustest.net to be reset every few weeks. Do please use at your own risk.</h5>
 				</div>
 				
 				<!-- featured-list -->	
